--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,17 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
   "ConnectionStrings": {
-    "ServiceContextConnection": "Server=localhost;Database=dotnet-example;User Id=sa;Password=@minPass123;"
+    "ServiceContextConnection": "Server=127.0.0.1;Database=dotnet-example;User Id=sa;Password=@minPass123;"
   },
-  "JWT": {  
-    "ValidAudience": "http://localhost:4200",  
-    "ValidIssuer": "http://localhost:59921",  
-    "Secret": "StrONGKAutHENTICATIONKEy"  
+  "JWT": {
+    "ValidAudience": "http://127.0.0.1:4200",
+    "ValidIssuer": "http://127.0.0.1:59921",
+    "Secret": "StrONGKAutHENTICATIONKEy"
   }
 }
