Fix Docker compatibility

--- a/API/Dockerfile
+++ b/API/Dockerfile
@@ -1,11 +1,11 @@
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
-ARG ENV_NAME
 WORKDIR /project
 COPY . .
 RUN dotnet restore
-RUN dotnet publish --no-self-contained -c Release -o ./publish /p:EnvironmentName=${ENV_NAME}
+RUN dotnet publish --no-self-contained -c Release -o ./publish
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
 COPY --from=build /project/publish .
-ENTRYPOINT ["dotnet", "API.dll"]
+ENV ENV_NAME=""
+ENTRYPOINT dotnet API.dll --environment "$ENV_NAME"
