--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "ServiceContextConnection": "Server=127.0.0.1;Database=dotnet-example;User Id=sa;Password=@minPass123;"
+    "ServiceContextConnection": ""
   },
   "JWT": {
-    "ValidAudience": "http://127.0.0.1:4200",
-    "ValidIssuer": "http://127.0.0.1:59921",
+    "ValidAudience": "http://127.0.0.1",
+    "ValidIssuer": "http://127.0.0.1",
     "Secret": "StrONGKAutHENTICATIONKEy"
   }
 }
